fixing video on mobile

--- a/postcard-core/styles/postcard.sass
+++ b/postcard-core/styles/postcard.sass
@@ -92,6 +92,7 @@ ul.postcard-feed
       font:
         size: 20/$em
     span.postcard-message
+      word-wrap: break-word
       font-size: 20/$em
       a
         text-decoration: none
@@ -243,6 +244,7 @@ span.video-indicator
     text-align: center
     line-height: 28/$em
     color: $grey
+    word-wrap: break-word
     .value
       font:
         size: 22/$em
